[FIX] web_studio: ViewEditor: primary button invisible are readable
Have some buttons with class ".btn .btn-primary" and that are invisible in the arch.
In studio, click on "Show invisible elements".

The text of those buttons were not readable on the screen because of the lack of contrast.

This commit fixes this, the background becoming stripped while keeping the original background-
color set on the element, since the background-image property is used with a stripped repeating
mask.

closes odoo/enterprise#55730

X-original-commit: dfdece14dd57c35b95686ab4192eef7bd9d1b704

--- a/web_studio/static/src/client_action/view_editor/editors/form/form_editor_renderer/form_editor_renderer.scss
+++ b/web_studio/static/src/client_action/view_editor/editors/form/form_editor_renderer/form_editor_renderer.scss
@@ -10,18 +10,6 @@
             overflow: unset;
         }
 
-        .o_web_studio_show_invisible, & + .o-web-studio-element-ghost {
-            outline: 1px solid $o-web-studio-bg-lighter;
-            background: repeating-linear-gradient(
-                45deg,
-                white,
-                white 5px,
-                $o-web-studio-bg-lighter 5px,
-                $o-web-studio-bg-lighter 10px
-            );
-            background-attachment: fixed;
-        }
-
         .o-web-studio-editor--element-clickable {
             // HOVER HANDLING
             // native selector: the main sibling is hovered
